--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
-app.grails.version=2.2.0
+#Grails Metadata file
+#Mon Apr 29 18:57:38 CEST 2013
+app.grails.version=2.2.1
+app.name=grails-atmosphere-meteor
