--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
-*.log
-/target
-/docs
-/grails-*.zip
-/plugin.xml
-.settings
-.idea
 *.iml
+/.idea
+vcs.xml
+workspace.xml
+.classpath
+.project
+*.iws
+*Db.properties
+*Db.script
+.settings
+stacktrace.log
+/*.zip
+/plugin.xml
+/*.log
+/*DB.*
+/cobertura.ser
+.DS_Store
+/target/
+/out/
+/web-app/plugins
+/web-app/WEB-INF/classes
+/.link_to_grails_plugins/
+/target-eclipse/
+/grails-*.zip
+/grails-*.zip.sha1
