--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Sat Aug 03 16:38:55 MDT 2013
-app.grails.version=2.3.0
+#Thu Oct 17 19:33:34 CEST 2013
+app.grails.version=2.3.1
 app.name=grails-atmosphere-meteor
+app.servlet.version=3.0
