updated to version 0.7.1

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Thu Oct 17 19:33:34 CEST 2013
-app.grails.version=2.3.1
+#Tue Feb 04 22:17:32 CET 2014
+app.grails.version=2.3.5
 app.name=grails-atmosphere-meteor
 app.servlet.version=3.0
