--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,24 @@
-*.iml
-/.idea
-vcs.xml
-workspace.xml
-.classpath
-.project
-*.iws
+.DS_Store
+/*.iml
+/*.ipr
+/*.iws
+/*.log
+/*.sha1
+/*.zip
+/.classpath
+/.gitignore
+/.project
+/.settings
+/cobertura.ser
+stacktrace.log
 *Db.properties
 *Db.script
-.settings
-stacktrace.log
-/*.zip
 /plugin.xml
-/*.log
 /*DB.*
-/cobertura.ser
-.DS_Store
-/target/
+/.idea/
+/.link_to_grails_plugins/
 /out/
+/target/
+/target-eclipse/
 /web-app/plugins
 /web-app/WEB-INF/classes
-/.link_to_grails_plugins/
-/target-eclipse/
-/grails-*.zip
-/grails-*.zip.sha1
